Moved all classes responsible for parsing primitive (object) values to a separate package.