@@ -13,28 +13,28 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
-package org.exolab.castor.xml;
+package org.exolab.castor.xml.parsing.primitive.objects;
 
 import org.castor.core.util.StringUtil;
 
 /**
  * This class is part of the command pattern implementation to instantiate an
- * object. It is used as a command by the command invoker PrimitiveObject.
+ * object. It is used as a command by the command invoker
+ * {@link PrimitiveObject}.
  * 
  * @author <a href="mailto:philipp DOT erlacher AT gmail DOT com">Philipp
  *         Erlacher</a>
  * 
  */
-class PrimitiveBigInteger extends PrimitiveObject {
+class PrimitiveLong extends PrimitiveObject {
 
     @Override
     public Object getObject() {
         if (StringUtil.isEmpty(value)) {
-            return java.math.BigInteger.valueOf(0);
+            return new Long(0);
         }
-
-        return new java.math.BigInteger(value);
+            
+        return new Long(value);
     }
 
 }
